compiler/src/test/resources/golden/errors/dup_type_param.dawn
fn f[T, T](x: T) -> T = x
