compiler/src/test/resources/golden/errors/dup_type_param.err
error: duplicate type parameter names
  --> dup_type_param.dawn:1:4
  |
1 | fn f[T, T](x: T) -> T = x
  |    ^
